# RefactorGraph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp
src/00common/: CMakeLists.txt  README.md
src/00common/deprecated/: op_type.h
src/00common/include/: common.h  data_type.h  error_handler.h  op_type.h
src/00common/include/common/: bf16_t.h  blob.h  data_type.h  error_handler.h  fp16_t.h  natural.h  range.h  rc.hpp  slice.h
src/00common/include/refactor/: common.h  error_handler.h  fp16_t.h  natural.h  range.h  slice.h
src/00common/src/: blob.cc  data_type.cc  op_type.cc
src/00common/test/: test.cpp
src/01graph_topo/: CMakeLists.txt  README.md
src/01graph_topo/include/: graph_topo.h  graph_topo.hpp  graph_topo_searcher.hpp
src/01graph_topo/include/graph_topo/: builder.hpp  container.h  container.hpp  graph_topo.h  graph_topo.hpp  graph_topo_builder.hpp  graph_topo_searcher.hpp  inplace_modifier.h  linked_graph.h  linked_graph.hpp  modifier.h  polymorph_graph.h  polymorph_graph.hpp  searcher.h  searcher.hh  searcher.hpp
src/01graph_topo/src/: container.cc  inplace_modifier.cc  internal.h  modifier.cc  searcher.cc
src/01graph_topo/test/: test.cpp  test_graph_topo.cpp  test_linked.cpp  test_modifier.cpp  topo.h
src/02computation/: CMakeLists.txt  README.md
src/02computation/include/computation/: graph.h  infer.h  operator.h  tensor.h
src/02computation/include/graph/: edge_info.h  graph.h  node_info.h
src/02computation/src/: edge_info.cc  graph.cc  infer.cc  node_info.cc  operator.cc  subgraph.cc  tensor.cc
src/02computation/src/infer/: infer.cpp  infer.h
src/02computation/test/: test_graph.cpp  test_op_type.cpp  test_subgraph.cpp
src/02hardware/: CMakeLists.txt  README.md
src/02hardware/include/hardware/: blob.hh  device.h  device_manager.h  foreign_blob.hh  functions.h  mem_manager.hh  mem_offset_calculator.h  mem_pool.h  memory.h
src/02hardware/src/: blob.cc  device.cc  device_manager.cpp  foreign_blob.cc  mem_offset_calculator.cc  mem_pool.cc
src/02hardware/src/devices/: cpu.cc  nvidia.cc
src/02hardware/test/: test_mem_offset_calculator.cpp  test_mem_pool.cpp
src/02mem_manager/: CMakeLists.txt
src/02mem_manager/include/mem_manager/: blob.h  blob.hh  foreign_blob.hh  functions.h  mem_functions.h  mem_manager.hh  mem_offset_calculator.h  mem_pool.h  offset.h  segmentation.h
src/02mem_manager/src/: blob.cc  foreign_blob.cc  mem_offset_calculator.cc  mem_pool.cc  offset.cpp
src/03graph/: CMakeLists.txt  README.md
src/03graph/include/: edge_info.h  graph.h
src/03graph/include/graph/: edge_info.h  graph.h  node_info.h
src/03graph/src/: edge_info.cc  graph.cc  node_info.cc  subgraph.cc
src/03graph/src/infer/: infer.cpp  infer.h
src/03graph/test/: test_edge_info.cpp  test_graph.cpp  test_infer_arithmetic.cpp  test_infer_conv.cpp  test_infer_gemm.cpp  test_infer_global_pool.cpp  test_infer_pool.cpp  test_infer_reshape.cpp  test_infer_unary.cpp  test_shape_broadcast.cpp  test_shape_pool.cpp  test_subgraph.cpp
src/03kernel/: CMakeLists.txt
src/03kernel/include/kernel/: candidata.h  kernel.h  naive_selector.h  selector.h  target.h  tensor.h
src/03kernel/src/: graph.cc  kernel.cc  naive_selector.cc
src/03kernel/src/collectors/: simple_binary.cc  simple_unary.cc
src/03runtime/: CMakeLists.txt
src/03runtime/include/runtime/: mem_manager.hh  resource.h  stream.h
src/03runtime/src/: mem_manager.cc  resource.cpp  runtime.cc  stream.cc
src/04frontend/: CMakeLists.txt  README.md
src/04frontend/include/frontend/: graph.h  infer.h  lower.h  operator.h  tensor.h
src/04frontend/src/: graph.cc  infer.cc  lower.cc  operator.cc  tensor.cc
src/04kernel/: CMakeLists.txt
src/04kernel/bang/: CMakeLists.txt
src/04kernel/cuda/: CMakeLists.txt
src/04kernel/src/: blob.cc  cuda_mem.h  graph.cc  kernel.cc  layout.cc  target.cc  tensor.cc
src/04onnx/: CMakeLists.txt
src/04onnx/src/: operators.cpp
src/04onnx/test/: test_concat.cpp  test_cum_sum.cpp  test_expand.cpp  test_unsqueeze.cpp
src/05computation/: CMakeLists.txt
src/05computation/src/: computation.cpp  graph.cc  graph_mutant.cc  mutant_generator.cc  operator.cc
src/05computation/test/: test_conv_to_matmul.cpp  test_mutant_generator.cpp  test_transpose.cpp
src/05kernel/: CMakeLists.txt
src/05onnx/: CMakeLists.txt
src/05onnx/src/: operators.cpp
src/05onnx/test/: test_concat.cpp  test_cum_sum.cpp  test_expand.cpp  test_shape.cpp  test_squeeze.cpp  test_unsqueeze.cpp
src/06communication/: CMakeLists.txt
src/06communication/src/: operators.cpp
src/06frontend/: CMakeLists.txt
src/06frontend/src/: common.cpp  graph.cc  infer.cc  operator.cc  tensor.cc
src/06onnx/: CMakeLists.txt
src/06python_ffi/: CMakeLists.txt  README.md
src/06python_ffi/src/: compiler.cc  compiler.h  functions.cpp  functions.h  import.cpp  import.h  main.cpp
src/07onnx/: CMakeLists.txt
src/07onnx/src/: operators.cpp
src/07onnx/test/: test_clip.cpp  test_concat.cpp  test_conv.cpp  test_cum_sum.cpp  test_einsum.cpp  test_expand.cpp  test_hard_sigmoid.cpp  test_pad.cpp  test_shape.cpp  test_simple_unary.cpp  test_squeeze.cpp  test_unsqueeze.cpp
src/07python_ffi/: CMakeLists.txt
src/07python_ffi/src/: compiler.cc  compiler.h  executor.cc  executor.h  functions.cpp  import.cpp  import.h  main.cpp
src/08-01llm/: CMakeLists.txt  README.md
src/08-01llm/src/: operators.cpp
src/08-01llm/test/: test_attention.cpp  test_rms_normalization.cpp
src/08-02moe/: CMakeLists.txt
src/08-02moe/include/: operators.h
src/08-02moe/src/: operators.cpp
src/08-02moe/test/: test_moe.cpp
src/08communication/: CMakeLists.txt
src/08communication/src/: operators.cpp
src/09python_ffi/: CMakeLists.txt  README.md  pyproject.toml
src/09python_ffi/src/: compiler.cc  compiler.h  executor.cc  executor.h  functions.cpp  functions.h  import.cpp  import.h  main.cpp  search.cpp  search.h
src/kernel_library/: CMakeLists.txt  README.md
src/transformation/: CMakeLists.txt  README.md
src/transformation/src/: conv.cc
src/transformation/test/: test.cpp
(+1151 files in other folders)
