cmake_minimum_required(VERSION 3.10)
project(common)

file(GLOB_RECURSE COMMON_SRC src/*.cc)
add_library(common STATIC ${COMMON_SRC})
target_link_libraries(common PUBLIC fmt)
target_include_directories(common PUBLIC include)

file(GLOB_RECURSE COMMON_TEST test/*.cpp)
if(COMMON_TEST)
    add_executable(common_test ${COMMON_TEST})
    add_test(common_test common_test)
    target_link_libraries(common_test common GTest::gtest_main ${BACKWARD_ENABLE})
    add_backward(common_test)
endif()
