cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
project(graph_topo VERSION 0.0.0 LANGUAGES CXX)
message(STATUS "Project " ${PROJECT_NAME} " version " ${PROJECT_VERSION})

file(GLOB_RECURSE GRAPH_TOPO_SRC src/*.cc src/*.cpp)
add_library(graph_topo STATIC ${GRAPH_TOPO_SRC})
target_link_libraries(graph_topo PUBLIC common)
target_include_directories(graph_topo PUBLIC include)

file(GLOB_RECURSE GRAPH_TOPO_TEST test/*.cpp)
if(GRAPH_TOPO_TEST)
    add_executable(graph_topo_test ${GRAPH_TOPO_TEST})
    add_test(graph_topo_test graph_topo_test)
    target_link_libraries(graph_topo_test graph_topo GTest::gtest_main ${BACKWARD_ENABLE})
    add_backward(graph_topo_test)
endif()
