cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
project(runtime VERSION 0.0.0 LANGUAGES CXX)
message(STATUS "Project " ${PROJECT_NAME} " version " ${PROJECT_VERSION})

file(GLOB_RECURSE RUNTIME_SRC src/*.cc src/*.cpp)
add_library(runtime STATIC ${RUNTIME_SRC})
target_link_libraries(runtime PUBLIC graph_topo hardware)
target_include_directories(runtime PUBLIC include)

file(GLOB_RECURSE RUNTIME_TEST test/*.cpp)
if(RUNTIME_TEST)
    add_executable(runtime_test ${RUNTIME_TEST})
    add_test(runtime_test runtime_test)
    target_link_libraries(runtime_test runtime GTest::gtest_main ${BACKWARD_ENABLE})
    add_backward(runtime_test)
endif()
