cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
project(computation VERSION 0.0.0 LANGUAGES CXX)
message(STATUS "Project " ${PROJECT_NAME} " version " ${PROJECT_VERSION})

file(GLOB_RECURSE COMPUTATION_SRC src/*.cc src/*.cpp)
add_library(computation STATIC ${COMPUTATION_SRC})
target_link_libraries(computation PUBLIC kernel)
target_include_directories(computation PUBLIC include)

file(GLOB_RECURSE COMPUTATION_TEST test/*.cpp)
if(COMPUTATION_TEST)
    add_executable(computation_test ${COMPUTATION_TEST})
    add_test(computation_test computation_test)
    target_link_libraries(computation_test computation GTest::gtest_main Backward::Object)
endif()
