cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
project(onnx VERSION 0.0.0 LANGUAGES CXX)
message(STATUS "Project " ${PROJECT_NAME} " version " ${PROJECT_VERSION})

file(GLOB_RECURSE ONNX_SRC src/*.cc src/*.cpp)
add_library(onnx STATIC ${ONNX_SRC})
target_link_libraries(onnx PUBLIC frontend)
target_include_directories(onnx PUBLIC include)

file(GLOB_RECURSE ONNX_TEST test/*.cpp)
if(ONNX_TEST)
    add_executable(onnx_test ${ONNX_TEST})
    add_test(onnx_test onnx_test)
    target_link_libraries(onnx_test onnx GTest::gtest_main Backward::Object)
endif()
