cmake_minimum_required(VERSION 3.10)
project(communication)

file(GLOB_RECURSE COMMUNICATION_SRC src/*.cc src/*.cpp)
add_library(communication STATIC ${COMMUNICATION_SRC})
target_link_libraries(communication PUBLIC frontend)
target_include_directories(communication PUBLIC include)

file(GLOB_RECURSE COMMUNICATION_TEST test/*.cpp)
if(COMMUNICATION_TEST)
    add_executable(communication_test ${COMMUNICATION_TEST})
    add_test(communication_test communication_test)
    target_link_libraries(communication_test communication GTest::gtest_main ${BACKWARD_ENABLE})
    add_backward(communication_test)
endif()
