[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "refactor_graph"
version = "0.0.0"
authors = [{ name = "YdrMaster", email = "ydrml@hotmail.com" }]
description = "Python frontend of RefactorGraph"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["ai-compiler"]
license = { text = "Apache" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["onnx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyinfinitensor = ["*.so"]
